--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-Remake of the Snake game from Nokia, for mobile first and also desktop, in javascript.
+Remake of the Snake game from Nokia, for mobile first and also desktop, in javascript. 
+controls on mobile to be intuitive.
