--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 Remake of the Snake game from Nokia, for mobile first and also desktop, in javascript. 
-controls on mobile to be intuitive.
+controls on mobile to be intuitive. games not to have scrolling on the screens, and should not move screen when people play.
